edited resume to fix alignment issues; added photos on home page

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ h2 {
     color: #36013f;
 }
 
+img {
+    border-radius: 10px;
+}
+
 .text {
     font-family: 'Georgia', serif;
     font-weight: 200;
@@ -47,7 +51,10 @@ h2 {
     display: flex;
     flex-direction: column;
 }
-
+.content-container img {
+    max-width: 100%;
+    align-self: center;
+}
 
 .button-container {
     display: flex;
